force-app/main/default/objects/Consumer_Complaint__c/Consumer_Complaint__c.object-meta.xml
<CustomObject>
    <description>Consumer Complaints Object</description>
    <label>Consumer Complaint</label>
    <nameField>
        <label>Consumer Complaint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumer Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>