force-app/main/default/objects/Consumer_Complaint__c/fields/Analysis_requested__c.field-meta.xml
<CustomField>
    <fullName>Analysis_requested__c</fullName>
    <label>Analysis requested</label>
    <type>Date</type>
</CustomField>