force-app/main/default/objects/Consumer_Complaint__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capping Issues</fullName>
            </value>
            <value>
                <fullName>Consumer Damage</fullName>
            </value>
            <value>
                <fullName>Contamination</fullName>
            </value>
            <value>
                <fullName>Handling Damage</fullName>
            </value>
            <value>
                <fullName>Inclusion</fullName>
            </value>
            <value>
                <fullName>Inconclusive</fullName>
            </value>
            <value>
                <fullName>Micro Fractures</fullName>
            </value>
            <value>
                <fullName>No Sample</fullName>
            </value>
            <value>
                <fullName>Operator Error</fullName>
            </value>
            <value>
                <fullName>Scratch</fullName>
            </value>
            <value>
                <fullName>Soft Blister</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>