force-app/main/default/objects/Consumer_Complaint__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Start comment with date</description>
    <inlineHelpText>Start comment with date</inlineHelpText>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>