force-app/main/default/objects/Consumer_Complaint__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <description>Display which Complaint Types have been chosen on the record. Whether None, Some or All.</description>
    <formula>CASE(  Complaint_Type_Number__c , 0, &quot;General&quot;, 1, &quot;Manufacturing Fault Present&quot;, 10, &quot;Legal&quot;, 100, &quot;Injury&quot;, 11, &quot;Manufacturing Fault Present and Legal&quot;, 101, &quot;Manufacturing Fault Present and Injury&quot;, 110, &quot;Legal and Injury&quot;, 111, &quot;Manufacturing Fault Present, Legal and Injury&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Type</label>
    <type>Text</type>
</CustomField>