force-app/main/default/objects/Consumer_Complaint__c/fields/Complaint_Type_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type_Confirmed_Date__c</fullName>
    <description>This Date field is populated when any of; 1-Manufacturing Fault Present, 2-Legal or 3-Injury have Yes selected</description>
    <label>Complaint Type Confirmed Date</label>
    <type>Date</type>
</CustomField>