force-app/main/default/objects/Consumer_Complaint__c/fields/Complaint_Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type_Number__c</fullName>
    <description>This field stores the number calculation for the Complaint Types to be used in the Complaint Type formula</description>
    <formula>CASE( Manufacturing_Fault_Present__c , &quot;Yes&quot;, 1, 0) +
CASE( Legal__c , &quot;Yes&quot;, 10, 0) +
CASE( Injury__c , &quot;Yes&quot;, 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complaint Type Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>