force-app/main/default/objects/Consumer_Complaint__c/fields/Container_Colour__c.field-meta.xml
<CustomField>
    <fullName>Container_Colour__c</fullName>
    <description>Container Colour</description>
    <label>Container Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Glass_Colour</valueSetName>
    </valueSet>
</CustomField>