force-app/main/default/objects/Consumer_Complaint__c/fields/Container_Ref__c.field-meta.xml
<CustomField>
    <fullName>Container_Ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Drawing Object</description>
    <label>Container Ref.</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Consumer Complaints</relationshipLabel>
    <relationshipName>Consumer_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>