force-app/main/default/objects/Consumer_Complaint__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Account Object</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Consumer Complaints</relationshipLabel>
    <relationshipName>Consumer_Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>