force-app/main/default/objects/Consumer_Complaint__c/fields/Customer_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference_No__c</fullName>
    <description>Customer Reference No.</description>
    <label>Customer Reference No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>