force-app/main/default/objects/Consumer_Complaint__c/fields/Date_Raised__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised__c</fullName>
    <description>To be manually completed by Encirc Team</description>
    <label>Date Raised</label>
    <type>Date</type>
</CustomField>