force-app/main/default/objects/Consumer_Complaint__c/fields/Date_Raised_Old_Formula_Field__c.field-meta.xml
<CustomField>
    <fullName>Date_Raised_Old_Formula_Field__c</fullName>
    <description>Date that the Consumer Complaint was created</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Raised Old Formula Field</label>
    <type>Date</type>
</CustomField>