force-app/main/default/objects/Consumer_Complaint__c/fields/Encirc_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Reference_No__c</fullName>
    <description>System Generated sequence number</description>
    <displayFormat>EN{0000}</displayFormat>
    <label>Encirc Reference No</label>
    <type>AutoNumber</type>
</CustomField>