force-app/main/default/objects/Consumer_Complaint__c/fields/Independent_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Independent_Analysis__c</fullName>
    <description>Independent Analysis</description>
    <label>Independent Analysis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>