force-app/main/default/objects/Consumer_Complaint__c/fields/Injury__c.field-meta.xml
<CustomField>
    <fullName>Injury__c</fullName>
    <description>Consumer Injury</description>
    <label>Injury</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>