force-app/main/default/objects/Consumer_Complaint__c/fields/Insurers_Informed__c.field-meta.xml
<CustomField>
    <fullName>Insurers_Informed__c</fullName>
    <description>Have the insurers been informed?</description>
    <label>Insurers Informed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>