force-app/main/default/objects/Consumer_Complaint__c/fields/Justified__c.field-meta.xml
<CustomField>
    <fullName>Justified__c</fullName>
    <description>Is complaint justified?</description>
    <label>Justified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>