force-app/main/default/objects/Consumer_Complaint__c/fields/Manufacture_line__c.field-meta.xml
<CustomField>
    <fullName>Manufacture_line__c</fullName>
    <label>Manufacture line.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>