force-app/main/default/objects/Consumer_Complaint__c/fields/Manufacturing_Fault_Present__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Fault_Present__c</fullName>
    <description>Is there a Manufacturing Fault Present?</description>
    <label>Manufacturing Fault Present</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>