force-app/main/default/objects/Consumer_Complaint__c/fields/Mould_set_No__c.field-meta.xml
<CustomField>
    <fullName>Mould_set_No__c</fullName>
    <description>Mould set number</description>
    <label>Mould set No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>