force-app/main/default/objects/Consumer_Complaint__c/fields/PO_Approved__c.field-meta.xml
<CustomField>
    <fullName>PO_Approved__c</fullName>
    <label>PO Approved</label>
    <type>Date</type>
</CustomField>