force-app/main/default/objects/Consumer_Complaint__c/fields/PR_Number__c.field-meta.xml
<CustomField>
    <fullName>PR_Number__c</fullName>
    <label>PR Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>