force-app/main/default/objects/Consumer_Complaint__c/fields/PR_Raised__c.field-meta.xml
<CustomField>
    <fullName>PR_Raised__c</fullName>
    <label>PR Raised</label>
    <type>Date</type>
</CustomField>