force-app/main/default/objects/Consumer_Complaint__c/fields/Previous_Comments__c.field-meta.xml
<CustomField>
    <fullName>Previous_Comments__c</fullName>
    <description>Previous comments box to contain all historical comments made on the Comments field.</description>
    <label>Previous Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>