force-app/main/default/objects/Consumer_Complaint__c/fields/Quality_Managers_Comments__c.field-meta.xml
<CustomField>
    <fullName>Quality_Managers_Comments__c</fullName>
    <label>Quality Managers Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>