force-app/main/default/objects/Consumer_Complaint__c/fields/Quote_Received__c.field-meta.xml
<CustomField>
    <fullName>Quote_Received__c</fullName>
    <description>Date the Quote is Received</description>
    <label>Quote Received</label>
    <type>Date</type>
</CustomField>