force-app/main/default/objects/Consumer_Complaint__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>Encirc Reference No - Customer - Date Raised</description>
    <formula>Name &amp;&quot;-&quot;&amp; Customer__r.Name  &amp;&quot;-&quot;&amp;  TEXT(Date_Raised_Old_Formula_Field__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>