force-app/main/default/objects/Consumer_Complaint__c/fields/Report_Complete__c.field-meta.xml
<CustomField>
    <fullName>Report_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that needs to be checked once the internal report has been completed and attached</description>
    <label>Report Complete</label>
    <type>Checkbox</type>
</CustomField>