force-app/main/default/objects/Consumer_Complaint__c/fields/Report_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Complete_Date__c</fullName>
    <description>When report has been sent to customer</description>
    <inlineHelpText>When report has been sent to customer</inlineHelpText>
    <label>Report Complete Date</label>
    <type>Date</type>
</CustomField>