force-app/main/default/objects/Consumer_Complaint__c/fields/Report_Received__c.field-meta.xml
<CustomField>
    <fullName>Report_Received__c</fullName>
    <label>Report Received</label>
    <type>Date</type>
</CustomField>