force-app/main/default/objects/Consumer_Complaint__c/fields/Risk_Manager_Informed__c.field-meta.xml
<CustomField>
    <fullName>Risk_Manager_Informed__c</fullName>
    <description>To track whether or not the Risk Manager has been informed of the complaint</description>
    <label>Risk Manager Informed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>