force-app/main/default/objects/Consumer_Complaint__c/fields/Sample_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Sample_Arrived__c</fullName>
    <description>Date the sample arrived from the Customer</description>
    <label>Sample Arrived</label>
    <type>Date</type>
</CustomField>