force-app/main/default/objects/Consumer_Complaint__c/fields/Sample_description__c.field-meta.xml
<CustomField>
    <fullName>Sample_description__c</fullName>
    <label>Sample description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>