force-app/main/default/objects/Consumer_Complaint__c/fields/Samples_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Samples_Dispatched__c</fullName>
    <label>Samples Dispatched</label>
    <type>Date</type>
</CustomField>