force-app/main/default/objects/Consumer_Complaint__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Plant__c</columns>
    <columns>Container_Ref__c</columns>
    <columns>Container_Colour__c</columns>
    <columns>Manufacture_line__c</columns>
    <columns>Cause__c</columns>
    <columns>Independent_Analysis__c</columns>
    <columns>Report_Complete__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>